[metadata]
name=gherkin_paperwork
version=0.0.1
author=Florian Dupeyron
author_email=florian.dupeyron@mugcat.fr
license='MIT'
description=Simple wrapper around the gherkin library for documentation stuff.
long_description= file: README.rst
long_description_content_type=text/x-rst
url=https://github.com/fdmysterious/gherkin-paperwork
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[options]
package_dir=
	= src

include_package_data=true

packages= find:
python_requires = >=3.9

install_requires =
	gherkin-official==24.1.0
	tabulate==0.9.0

[options.packages.find]
where = src
